--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smart Vote AI - Ballot Analyzer</title>
+    <title>Smart Voting - Ballot Analyzer</title>
     <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
 {
